book/tests/snapshots/snapshot__tests__prql__queries__functions-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "func interp low:0 high x -> (x - low) / (high - low)\n\nfrom students\nderive [\n  sat_proportion_1 = (interp 1600 sat_score),\n  sat_proportion_2 = (interp low:0 1600 sat_score),\n]\n"
---
func interp high x low:0 -> x - low / high - low



from students
derive [
  sat_proportion_1 = interp 1600 sat_score,
  sat_proportion_2 = interp low:0 1600 sat_score,
]



