book/tests/snapshots/snapshot__tests__prql__queries__functions-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "func interp low:0 high x -> (x - low) / (high - low)\n\nfrom students\nderive [\n  sat_proportion_1 = (sat_score | interp 1600),\n  sat_proportion_2 = (sat_score | interp low:0 1600),\n]\n"
---
func interp high x low:0 -> x - low / high - low



from students
derive [
  sat_proportion_1 = (
  sat_score
  interp 1600
),
  sat_proportion_2 = (
  sat_score
  interp low:0 1600
),
]



