book/tests/snapshots/snapshot__tests__prql__queries__functions-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "func fahrenheit_to_celsius temp -> (temp - 32) / 1.8\n\nfrom cities\nderive temp_c = (temp_f | fahrenheit_to_celsius)\n"
---
func fahrenheit_to_celsius temp -> temp - 32 / 1.8



from cities
derive temp_c = (
  temp_f
  fahrenheit_to_celsius
)



