book/tests/snapshots/snapshot__tests__prql__queries__functions-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "func fahrenheit_to_celsius temp -> (temp - 32) / 1.8\nfunc interp low:0 high x -> (x - low) / (high - low)\n\nfrom kettles\nderive boiling_proportion = (temp_c | fahrenheit_to_celsius | interp 100)\n"
---
func fahrenheit_to_celsius temp -> temp - 32 / 1.8



func interp high x low:0 -> x - low / high - low



from kettles
derive boiling_proportion = (
  temp_c
  fahrenheit_to_celsius
  interp 100
)



