book/tests/snapshots/snapshot__tests__prql__queries__pipelines-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive gross_salary = (salary + payroll_tax)\n"
---
from employees
derive gross_salary = salary + payroll_tax



